--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@testing-library/user-event": "^13.5.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-router-dom": "^6.26.0",
         "react-scripts": "5.0.1",
         "web-vitals": "^2.1.4"
     },
@@ -58,6 +59,7 @@
         "eslint-plugin-simple-import-sort": "^10.0.0",
         "gh-pages": "^6.1.1",
         "husky": "^8.0.3",
+        "sass": "^1.77.6",
         "prettier": "^2.8.8",
         "source-map-explorer": "^2.5.3"
     },
